tests/semantic/fact_variable/fact_variable.err
Error: Variable BB in fact in file fact_variable.dl at line 7
F(BB,"AA").
--^---------
Warning: Variable BB only occurs once in file fact_variable.dl at line 7
F(BB,"AA").
--^---------
1 errors generated, evaluation aborted
