tests/semantic/fact_variable/fact_variable.dl
.type Node

.decl F (node1:Node, node2:Node)
.input F ()

// not ok [variable]
F(BB,"AA").
